# aiminjia

./: .github-exclude  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  requirements.txt  vite.config.ts
code/src-tauri/: Cargo.toml  python-runtime  requirements.txt  tauri.conf.json
code/src-tauri/.serena/: project.yml
code/src-tauri/icons/: icon.icns
code/src-tauri/plugins/comp-analysis/: workflow.toml
code/src-tauri/plugins/comp-analysis/prompts/: base.md  step0.md  step1.md  step2.md  step3.md  step4.md  step5.md
code/src-tauri/prompts/: base.md  daily.md  step1.md  step2.md  step3.md  step4.md  step5.md
code/src-tauri/src/: lib.rs
code/src-tauri/src/auth/: client.rs  mod.rs  state.rs
code/src-tauri/src/commands/: auth.rs  chat.rs  export.rs  file.rs  mod.rs  settings.rs  workspace.rs
code/src-tauri/src/llm/: checkpoint.rs  content_filter.rs  context_decay.rs  gateway.rs  masking.rs  mod.rs  orchestrator.rs  prompt_guard.rs  prompts.rs  router.rs  streaming.rs  taor.rs  tool_executor.rs  tools.rs
code/src-tauri/src/llm/providers/: custom.rs  deepseek_v3.rs  lotus.rs  mod.rs  (+3 more)
code/src-tauri/src/models/: analysis.rs  conversation.rs  message.rs  mod.rs  settings.rs
code/src-tauri/src/plugin/: context.rs  declarative_skill.rs  manifest.rs  python_bridge.rs  skill_trait.rs  tool_trait.rs
code/src-tauri/src/python/: _restore.py  analysis_utils.rs  mod.rs  parser.rs  runner.rs  sandbox.rs  session.rs
code/src-tauri/src/search/: bing.rs  bocha.rs  mod.rs  searxng.rs  tavily.rs
code/src-tauri/src/storage/: file_manager.rs  mod.rs  workspace.rs
(+319 files in other folders)
