[package]
name = "aijia"
version = "0.2.0"
description = "AI小家 — 组织专家，工作助手"
authors = ["AI小家 Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.10.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Encryption
aes-gcm = "0.10"

# Logging
log = "0.4"

# Home directory resolution
dirs = "6"

# Unix process inspection (kill(pid, 0) for orphan lock detection)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
bytes = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
